--- a/app/src/main/res/layout/fragment_phone_auth_fragment2.xml
+++ b/app/src/main/res/layout/fragment_phone_auth_fragment2.xml
@@ -41,13 +41,24 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/background_color" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/statusText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:visibility="gone" />
     </LinearLayout>
 </RelativeLayout>
