--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -80,13 +80,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/statusText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
-                android:visibility="visible" />
-
-            <TextView
                 android:id="@+id/usePhoneInsteadText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -95,6 +88,25 @@
                 android:text="@string/use_phone_to_reset_password"
                 android:textAlignment="center"
                 android:textColor="@color/redirect_color" />
+
+            <TextView
+                android:id="@+id/statusText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:fontFamily="@font/open_sans"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:visibility="visible" />
+
+            <ProgressBar
+                android:id="@+id/progressBar2"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" />
         </LinearLayout>
     </RelativeLayout>
 
