CreatePost and CreateRoom UI improvement - Show progress bar when loading - Disable all UI when calling API - Disable back button when calling API - Clear editText and selected photo when click back button

--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -52,6 +52,14 @@
             android:contentDescription="@string/content_description"
             android:onClick="@{viewmodel::onClickImageChosen}"/>
 
+        <ProgressBar
+            android:id="@+id/progressBar4"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
     </RelativeLayout>
 
 </layout>
