--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="redirect_color">#2196F3</color>
 
     <color name="grey">#FFF7F6</color>
+    <color name="grey_color">#EDE4E3</color>
 </resources>
