--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -54,6 +54,18 @@
             android:contentDescription="@string/content_description"
             android:onClick="@{viewmodel::onClickImageChosen}"/>
 
+        <TextView
+            android:id="@+id/feedbackText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/room_name_field"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="180dp"
+            android:fontFamily="@font/open_sans"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:visibility="gone" />
+
         <ProgressBar
             android:id="@+id/progressBar5"
             style="?android:attr/progressBarStyle"
