--- a/app/src/main/res/layout/fragment_single_post.xml
+++ b/app/src/main/res/layout/fragment_single_post.xml
@@ -19,7 +19,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@id/commentFieldContainer"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="10dp"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/emptyStateContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
+            android:drawableTop="@drawable/empty"
+            android:paddingTop="10dp"
+            android:text="@string/empty_state_single_post"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/commentFieldContainer"
@@ -27,7 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="visible">
 
             <EditText
                 android:id="@+id/commentField"
@@ -41,9 +56,9 @@
                 android:background="@null"
                 android:ems="10"
                 android:hint="@string/comment_hint"
-                android:inputType="textPersonName"
                 android:importantForAutofill="no"
-                android:text="@={viewmodel.commentText}"/>
+                android:inputType="textPersonName"
+                android:text="@={viewmodel.commentText}" />
 
             <ImageButton
                 android:id="@+id/sendButton"
@@ -52,9 +67,9 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:background="@null"
-                app:srcCompat="@drawable/ic_send"
                 android:contentDescription="@string/content_description"
-                android:onClick="@{viewmodel::onSendButtonClick}"/>
+                android:onClick="@{viewmodel::onSendButtonClick}"
+                app:srcCompat="@drawable/ic_send" />
 
         </LinearLayout>
 
