--- a/app/src/main/res/layout/fragment_single_post.xml
+++ b/app/src/main/res/layout/fragment_single_post.xml
@@ -14,6 +14,14 @@
         tools:context=".ui.SinglePostFragment">
 
 
+        <ProgressBar
+            android:id="@+id/loadingBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/postAndCommentRecyclerView"
             android:layout_width="match_parent"
@@ -33,6 +41,21 @@
             android:text="@string/empty_state_single_post"
             android:textAlignment="center"
             android:textSize="18sp"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/unhideButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/emptyStateContainer"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:background="@color/colorPrimary"
+            android:fontFamily="@font/open_sans"
+            android:onClick="@{viewmodel::onUnhideButtonClick}"
+            android:text="@string/unhide"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/background_color"
             android:visibility="gone" />
 
         <LinearLayout
