--- a/app/src/main/res/layout/comment_item_row.xml
+++ b/app/src/main/res/layout/comment_item_row.xml
@@ -16,13 +16,26 @@
         android:layout_marginEnd="10dp">
 
 
+        <ImageButton
+            android:id="@+id/moreButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@null"
+            app:srcCompat="@drawable/ic_more_button"
+            android:contentDescription="@string/more_content_description" />
+
         <LinearLayout
             android:id="@+id/container"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_toStartOf="@+id/moreButton">
 
             <TextView
                 android:id="@+id/username"
