--- a/app/src/main/res/layout/post_item_row.xml
+++ b/app/src/main/res/layout/post_item_row.xml
@@ -25,15 +25,26 @@
                 android:layout_height="match_parent">
 
 
+                <ImageButton
+                    android:id="@+id/moreButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_margin="10dp"
+                    android:background="@null"
+                    app:srcCompat="@drawable/ic_more_button"
+                    android:contentDescription="@string/more_content_description" />
+
                 <TextView
                     android:id="@+id/username"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
                     android:text="@{data.author}"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_toStartOf="@+id/moreButton"/>
 
                 <TextView
                     android:id="@+id/timeAgo"
