--- a/app/src/main/res/layout/room_item_row.xml
+++ b/app/src/main/res/layout/room_item_row.xml
@@ -48,14 +48,29 @@
                     android:layout_marginTop="10dp"/>
 
                 <TextView
+                    android:id="@+id/timestamp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/room_name"
                     app:timeAgo="@{model.createdAt}"
                     android:textAlignment="textStart"
                     android:fontFamily="@font/open_sans"
+                    android:layout_toStartOf="@+id/moreButton"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="5dp"/>
+
+                <ImageButton
+                    android:id="@+id/moreButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_below="@id/room_name"
+                    android:background="@null"
+                    app:srcCompat="@drawable/ic_more_button"
+                    android:contentDescription="@string/more_content_description" />
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
