UI of DisplayRoomFragment after hide a post or block a user - Remove the post that hided from the recyclerView in DisplayRoomFragment - Remove post the created by blocked user from recyclerView - Present progressBar when calling API to block the post or user
MainFragment minor improvement

--- a/app/src/main/res/layout/fragment_display_room.xml
+++ b/app/src/main/res/layout/fragment_display_room.xml
@@ -18,6 +18,14 @@
         android:layout_height="match_parent"
         tools:context=".ui.room.DisplayRoomFragment">
 
+        <ProgressBar
+            android:id="@+id/progressBar7"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
