UI of CommentFragment after hide a post or block a user - Remove the comment that hided from the recyclerView in CommentFragment - Remove comment that created by blocked user from recyclerView - Present progressBar when calling API to block the comment or user

--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -20,6 +20,14 @@
         tools:context=".ui.CommentFragment">
 
 
+        <ProgressBar
+            android:id="@+id/progressBar8"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/emptyStateComment"
             android:layout_width="match_parent"
