- Fix the issue of main activity crash if API level lower than 24 - Fix the issue of Logo become blur when API less than 24 in login,forgot pass,welcome UI

--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -14,7 +14,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="93dp"
         android:contentDescription="@string/app_name"
-        app:srcCompat="@drawable/ic_logo" />
+        app:srcCompat="@drawable/upupherelogo" />
 
     <TextView
         android:id="@+id/textView22"
