--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -20,7 +20,7 @@
             android:layout_height="80dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:src="@drawable/ic_logo"
+            android:src="@drawable/upupherelogo"
             android:contentDescription="@string/content_description" />
 
         <LinearLayout
