--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,7 +24,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             android:contentDescription="@string/logo"
-            app:srcCompat="@drawable/ic_logo" />
+            app:srcCompat="@drawable/upupherelogo" />
 
         <LinearLayout
             android:id="@+id/fieldContainer"
