--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -2,11 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-
+        <!--
         <item
             android:id="@+id/profile"
             android:icon="@drawable/ic_profile"
             android:title="@string/profile" />
+        -->
+        <item
+            android:id="@+id/feedback"
+            android:icon="@drawable/ic_feedback"
+            android:title="@string/feedback" />
 
         <item
             android:id="@+id/logout"
