--- a/app/src/main/res/layout/fragment_phone_auth_fragment2.xml
+++ b/app/src/main/res/layout/fragment_phone_auth_fragment2.xml
@@ -31,6 +31,18 @@
             android:text="@string/verify_phone_number_reason"
             android:textAlignment="center" />
 
+        <TextView
+            android:id="@+id/statusText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="2dp"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="14sp"
+            android:visibility="visible" />
+
         <Button
             android:id="@+id/continueButton"
             android:layout_width="match_parent"
@@ -49,16 +61,5 @@
             android:layout_margin="10dp"
             android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/statusText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp"
-            android:visibility="gone" />
     </LinearLayout>
 </RelativeLayout>
